# tokenWise

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  run_benchmark.py  setup.py  start.sh
.github/workflows/: publish.yml  test.yml
examples/: advanced_usage.py  basic_usage.py  curl_examples.sh
tests/: test_basic.py
tokenwise/: __init__.py  __main__.py  cache.py  chunker.py  config.py  embedder.py  models.py  optimizer.py  ranker.py  selector.py  utils.py  vector_store.py
