[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenwise"
dynamic = ["version"]
description = "Smart Context Optimization for LLMs - Reduce tokens by 70-90%"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["llm", "tokens", "optimization", "context", "ai", "gpt", "openai", "cost-reduction"]
authors = [
  {name = "TokenWise Team", email = "team@tokenwise.ai"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/tokenwise"
Documentation = "https://github.com/yourusername/tokenwise#readme"
Repository = "https://github.com/yourusername/tokenwise"
"Bug Reports" = "https://github.com/yourusername/tokenwise/issues"

[project.scripts]
tokenwise = "main:main"

[tool.setuptools]
packages = ["tokenwise"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

